Closed Bug 740862 Opened 13 years ago Closed 13 years ago

"ASSERTION: Freeze() failed" in nsEventSource::Observe(dom-window-frozen)

Categories

(Core :: DOM: Events, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: jruderman, Assigned: wfernandom2004)

References

Details

(Keywords: assertion, testcase)

Attachments

(3 files)

Attached file testcase
###!!! ASSERTION: Freeze() failed: 'rv', file content/base/src/nsEventSource.cpp, line 473
Attached file stack trace
I guess the testcase has to be local to trigger the assertion.
I couldn't reproduce it. Was it on Linux, Windows? Also, Was the EventSource("x") statement supposed to "x" actually (i.e. a non-existent resource), or was it supposed to me replace for a valid one?
I initially hit this on Mac, with EventSource pointing at a non-existent resource.
I can reproduce on Linux. Make sure you load the testcase from a file: URL.
OS: Mac OS X → All
Hardware: x86_64 → All
I couldn't reproduce it either on Linux. Anyway, nsEventSource::Freeze isn't supposed to fail. So, looking in the stack trace I noticed that it is probably occurring because the parameter passed to NS_ASSERTION is wrong.
Assignee: nobody → wfernandom2004
Status: NEW → ASSIGNED
Attached patch v1Splinter Review
Attachment #614996 - Flags: review?(bugs)
Attachment #614996 - Flags: review?(bugs) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/eba09afbc1f4 Thanks for the patch! One request - to make life easier for those checking in on your behalf, please make sure that future patches you submit have all the needed hg metadata in them per the link below. Thanks again! https://developer.mozilla.org/en-US/docs/Creating_a_patch_that_can_be_checked_in
Flags: in-testsuite-
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: