Bug 740862 - "ASSERTION: Freeze() failed" in nsEventSource::Observe(dom-window-frozen). r=smaug